--- a/net.blockattack.game.yaml
+++ b/net.blockattack.game.yaml
@@ -1,6 +1,6 @@
 app-id: net.blockattack.game
 runtime: org.freedesktop.Platform
-runtime-version: 23.08
+runtime-version: '24.08'
 sdk: org.freedesktop.Sdk
 command: blockattack
 rename-icon: blockattack
